<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedDetailMovie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_backdrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="@drawable/shape_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_backdrop"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/frame_backdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_backdrop">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_poster"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:src="@color/colorImage"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:ellipsize="marquee"
            android:fontFamily="@font/montserrat_bold"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="@+id/frame_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView_detail"
            app:layout_constraintTop_toBottomOf="@+id/frame_backdrop" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rating"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:translationZ="9dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/yellow_star"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/rating"
                android:fontFamily="@font/montserrat_light"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/genre"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/White_80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:ellipsize="end"
            android:text="@string/duration"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat_thin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tv_release_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/release"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView_detail"
            app:layout_constraintTop_toBottomOf="@id/cardView_detail" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/White_80"
            android:textSize="14sp"
            android:text="@string/release"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_release_title"
            app:layout_constraintTop_toBottomOf="@id/tv_release_title" />

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/description_title"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_release"
            app:layout_constraintTop_toBottomOf="@id/tv_release" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/White_80"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/description_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_description_title"
            app:layout_constraintTop_toBottomOf="@id/tv_description_title" />

        <TextView
            android:id="@+id/tv_tagline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tagline"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tvQuoteValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="@font/montserrat_light_italic"
            android:text="@string/quote"
            android:textColor="@color/White_70"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_tagline_title"
            app:layout_constraintStart_toStartOf="@+id/tv_tagline_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_tagline_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>